minor_change_in_onto

--- a/custom-interfaces/text-text-custom-tool-example/html_template.html
+++ b/custom-interfaces/text-text-custom-tool-example/html_template.html
@@ -184,7 +184,7 @@
       },
       {
         name: "description",
-        instructions: "Describe this image",
+        instructions: "Describe this text",
         type: "text",
       },
       {
